--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -242,6 +242,9 @@ body.light .mat-raised-button:not([class*=mat-elevation-z]), body .light .mat-ra
   background-color: #ECBD00 !important;
   color: white !important;
 }
+.exp-panel{
+  height: 100px;
+}
 thead{
   tr{
     height: 56px;
