--- a/src/app/modules/reports/search-loan-cases-by-cnic/search-loan-cases-by-cnic.component.html
+++ b/src/app/modules/reports/search-loan-cases-by-cnic/search-loan-cases-by-cnic.component.html
@@ -1,1 +1,115 @@
-<p>search-loan-cases-by-cnic works!</p>
+
+<div id="Kt-portlet-margin-top">
+    <div class="kt-portlet">
+        <div class="kt-portlet__head kt-portlet__head__custom" id="list-header" style="display: flex;flex-direction: row;justify-content: space-between; margin-bottom: 10px;">
+            <div class="kt-portlet__head-label">
+                <h3 class="kt-portlet__head-title">Add Vendor's Location</h3>
+            </div>
+            <!-- <span (click)="close(0)"><mat-icon>close</mat-icon></span> -->
+           
+            <button mat-raised-button color="warn" class="btn center" style="width: 5px; height: 30px;" (click)="close(0)"><mat-icon>close</mat-icon></button>
+        </div>
+    </div>
+  
+    <form [formGroup]="searchCnicForm" class="kt-form kt-form--group-seperator-dashed">
+
+        <div class="kt-form">
+
+            <div class="kt-portlet__body">
+
+                <div class="col-lg-12">
+                  <div class="form-group kt-form__group row">
+
+                    <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
+                            <mat-label class="customMatLabel">Zone</mat-label>
+                            <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone">
+                                <mat-option [value]="SelectedZones?.ZoneId">
+                                    {{SelectedZones?.ZoneName}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+            
+                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="!single_zone">
+                            <mat-label class="customMatLabel">Zone</mat-label>
+                            <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone"
+                                        (selectionChange)="changeZone($event)">
+                                <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
+                                            [disabled]="disable_zone">
+                                    {{zone?.ZoneName}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+
+                    <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                            <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
+                            
+                            <mat-select [(ngModel)]="selected_b" formControlName="BranchCode" [disabled]="disable_branch"
+                                        *ngIf="single_branch">
+                                <mat-option [value]="SelectedBranches?.BranchCode"
+                                >
+                                    {{SelectedBranches?.Name}}
+                                </mat-option>
+                            </mat-select>
+            
+                            <mat-select [(ngModel)]="selected_b" formControlName="BranchCode" [disabled]="disable_branch"
+                                        *ngIf="!single_branch">
+                                <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
+                                >
+                                    {{branch?.Name}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+
+                  </div>
+
+                  <div class="form-group kt-form__group row">
+
+                      <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                            <mat-label class="customMatLabel">CNIC</mat-label>
+                            <input matInput placeholder="Enter Cnic" formControlName="Cnic" maxlength="13" autocomplete="off"
+                                   appNumberOnly/>
+                        </mat-form-field>
+                      </div>
+
+                      <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                        <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                            <mat-label class="customMatLabel">Customer Name</mat-label>
+                            <input matInput placeholder="Enter Customer Name" formControlName="CustomerName" maxlength="30" autocomplete="off"/>
+                        </mat-form-field>
+                      </div>
+
+                </div>
+
+                    <div class="form-group kt-form__group row">
+                        <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+                                <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
+                                    <mat-label class="customMatLabel">Father Name</mat-label>
+                                    <input matInput placeholder="Enter Father Name" formControlName="FatherName" maxlength="30" autocomplete="off"/>
+                                </mat-form-field>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+
+
+    </form>
+
+    <div class="form-group kt-form__group row">
+        <div class="col-lg-12 kt-margin-bottom-20-mobile mat-table mt-3 d-flex justify-content-left">
+            <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" mat-raised-button color="primary" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Find</button>
+        </div>
+      </div>
+  
+  </div>
+
