--- a/src/app/modules/configuration-management/document-type-list/document-type-list.component.html
+++ b/src/app/modules/configuration-management/document-type-list/document-type-list.component.html
@@ -49,9 +49,9 @@
 
     <!-- Header -->
 
-    <div class="example-table-container">
+    <div class="example-table-container border shadow-xs rounded-sm bg-gray-50 ">
 
-        <mat-table class="lmat-elevation-z8 "
+        <mat-table class="lmat-elevation-z8  "
                    #table
                    [dataSource]="dataSource"
                    matSort
