--- a/src/app/modules/customer/authorized-customers/authorized-customers.component.html
+++ b/src/app/modules/customer/authorized-customers/authorized-customers.component.html
@@ -14,7 +14,7 @@
   <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between"
     style="flex-wrap: wrap">
   </div>
-  <div class="flex flex-auto overflow-y-scroll" style="flex-direction: column;">
+  <div class="flex flex-auto overflow-y-scroll border shadow-xs rounded-sm bg-gray-50" style="flex-direction: column;">
 
     <div class="example-table-container">
       <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort" matSortActive="id"
@@ -74,11 +74,13 @@
 
       <div class="mat-table__message" *ngIf="!loading && dataSource.data.length==0">No records found</div>
       <div class="mat-table__message" *ngIf="loading">Please wait....</div>
-      <mat-paginator [length]="15" [pageSize]="15" [pageSizeOptions]="[15,30, 50, 100]" [showFirstLastButtons]="true"></mat-paginator>
+     
 
     </div>
   </div>
-
+  <div style="display: flex;flex-direction: row;flex-wrap: wrap;justify-content: space-between">
+    <mat-paginator [length]="15" [pageSize]="15" [pageSizeOptions]="[15,30, 50, 100]" [showFirstLastButtons]="true"></mat-paginator>
+</div>
 </div>
 
 
