--- a/src/app/modules/report-managment/exception-log/exception-log.component.html
+++ b/src/app/modules/report-managment/exception-log/exception-log.component.html
@@ -91,7 +91,7 @@
 
 
 
-    <div class="example-table-container overflow-scroll" [style.height]="gridHeight">
+    <div class="example-table-container overflow-scroll border shadow-xs rounded-sm bg-gray-50" [style.height]="gridHeight">
         <mat-table class=""
                    #table
                    [dataSource]="dataSource"
