--- a/src/app/modules/report-managment/location-history/location-history.component.html
+++ b/src/app/modules/report-managment/location-history/location-history.component.html
@@ -96,7 +96,7 @@
 
 
 
-    <div class="example-table-container  overflow-scroll" [style.height]="gridHeight">
+    <div class="example-table-container border shadow-xs rounded-sm bg-gray-50  overflow-scroll" [style.height]="gridHeight">
         <mat-table class="lmat-elevation-z8"
                    #table
                    [dataSource]="dataSource"
