--- a/src/app/modules/user-management/Role/role-list/role-list.component.html
+++ b/src/app/modules/user-management/Role/role-list/role-list.component.html
@@ -28,7 +28,7 @@
 
 
     <!-- Main -->
-    <div class="flex flex-auto overflow-y-scroll">
+    <div class="flex flex-auto border shadow-xs rounded-sm bg-gray-50  overflow-y-scroll">
 
         <!-- Products list -->
         <div class="flex flex-auto overflow-hidden" style="flex-direction: column;">
