--- a/src/app/modules/report-managment/notification-history/notification-history.component.html
+++ b/src/app/modules/report-managment/notification-history/notification-history.component.html
@@ -93,7 +93,7 @@
 
 
 
-    <div class="example-table-container overflow-scroll" [style.height]="gridHeight">
+    <div class="example-table-container overflow-scroll border shadow-xs rounded-sm bg-gray-50" [style.height]="gridHeight">
         <mat-table
             #table
             [dataSource]="dataSource"
