--- a/src/app/modules/user-management/users/circle-list/circle-list.component.html
+++ b/src/app/modules/user-management/users/circle-list/circle-list.component.html
@@ -55,7 +55,7 @@
 
 
   <!-- Main -->
-  <div class="flex flex-auto overflow-y-scroll">
+  <div class="flex flex-auto border shadow-xs rounded-sm bg-gray-50 overflow-y-scroll">
 
     <!-- Products list -->
     <div class="flex flex-auto " style="flex-direction: column;">
