--- a/src/app/modules/borrower-information/borrower-information.component.html
+++ b/src/app/modules/borrower-information/borrower-information.component.html
@@ -133,8 +133,8 @@
 
 
 
-    <div class="flex flex-auto" style="flex-direction: column; overflow-y: scroll">
-        <div class="example-table-container">
+    <div class="flex flex-auto border shadow-xs rounded-sm bg-gray-50" style="flex-direction: column; overflow-y: scroll">
+        <div class="example-table-container ">
             <!--[style.height]="gridHeight"-->
             <mat-table
                 #table
