--- a/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/get-village-bench-marking/get-village-bench-marking.component.html
@@ -27,7 +27,7 @@
 
           <div class="row">
               <div class="col-lg-3 col-sm-12">
-                  <div class="flex flex-shrink-0 items-center mt-3 sm:mt-0">
+                  <div class="flex flex-shrink-0 items-center sm:mt-0">
 
                       <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
                           <mat-label class="customMatLabel">Zone</mat-label>
@@ -131,7 +131,7 @@
 
     <!-- Header -->
 
-    <div class="mat-table__wrapper overflow-y-scroll" [style.height]="gridHeight"  >
+    <div class="mat-table__wrapper overflow-y-scroll border shadow-xs rounded-sm bg-gray-50" [style.height]="gridHeight"  >
         <!--[style.height]="gridHeight"-->
         <mat-table
                    #table
