--- a/src/app/modules/customer/check-eligibility/check-eligibility.component.html
+++ b/src/app/modules/customer/check-eligibility/check-eligibility.component.html
@@ -99,7 +99,9 @@
                                     <span style="font-size: 14px !important; text-align:center">Please Place your fingertip on the scanner to verify your identity</span>
                                 </div>
                                 <div class="col-lg-12 text-center mt-1 mb-3">
-                                    <img src="./assets/media/icons/capture.jpg" class="img-responsive center-block"
+                                    <img src="./assets/media/icons/capture.jpg" style="height: 20%;
+    margin: auto;
+    width: 20%;"
                                          alt="icon"/>
                                 </div>
                                 <div class="col-lg-12 text-center mt-5 mb-3">
