--- a/src/app/modules/customer/eligibility-request/eligibility-request.component.html
+++ b/src/app/modules/customer/eligibility-request/eligibility-request.component.html
@@ -169,18 +169,20 @@
                     <ng-container matColumnDef="Actions">
                         <mat-header-cell *matHeaderCellDef mat-sort-header>Actions</mat-header-cell>
                         <mat-cell *matCellDef="let eligibilityRequest" style="flex-wrap: wrap">
-                            <a [href]="eligibilityRequest.NDCFilePath" _black="true" mat-icon-button color="accent"
+                            <a [href]="eligibilityRequest.NDCFilePath" mat-icon-button color="accent"
                                aria-label="View Files">
                                 <mat-icon>description</mat-icon>
                             </a>
                             <button mat-icon-button color="accent" aria-label="view NDC">
                                 <mat-icon>visibility</mat-icon>
                             </button>
-                            <button mat-icon-button color="accent" aria-label="Approve" (click)="changeStatus('A',eligibilityRequest.Id)"
+                            <button mat-icon-button color="accent" aria-label="Approve"
+                                    (click)="changeStatus('A',eligibilityRequest.Id)"
                                     *ngIf="eligibilityRequest.Status=='P'">
                                 <mat-icon>check</mat-icon>
                             </button>
-                            <button mat-icon-button color="accent" aria-label="Reject" (click)="changeStatus('R',eligibilityRequest.Id)"
+                            <button mat-icon-button color="accent" aria-label="Reject"
+                                    (click)="changeStatus('R',eligibilityRequest.Id)"
                                     *ngIf="eligibilityRequest.Status=='P'">
                                 <mat-icon>cancel</mat-icon>
                             </button>
