--- a/src/app/modules/reports/bufrication-of-os-balances-lc/bufrication-of-os-balances-lc.component.html
+++ b/src/app/modules/reports/bufrication-of-os-balances-lc/bufrication-of-os-balances-lc.component.html
@@ -6,7 +6,7 @@
             </div>
             <!-- <span (click)="close(0)"><mat-icon>close</mat-icon></span> -->
            
-            <button mat-raised-button color="warn" class="btn center" style="width: 5px; height: 30px;" (click)="close(0)"><mat-icon>close</mat-icon></button>
+            
         </div>
     </div>
   
@@ -19,7 +19,7 @@
                 <div class="col-lg-12">
                   <div class="form-group kt-form__group row">
 
-                    <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                    <div class="col-lg-6 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
                             <mat-label class="customMatLabel">Zone</mat-label>
                             <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone">
@@ -41,7 +41,7 @@
                         </mat-form-field>
                     </div>
 
-                    <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                    <div class="col-lg-6 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
                             
@@ -67,7 +67,7 @@
 
                   <div class="form-group kt-form__group row">
 
-                      <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                      <div class="col-lg-6 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Working Date (ddMMyyyy)</mat-label>
                             <input matInput placeholder="Enter Working Date" formControlName="WorkingDate" maxlength="8" autocomplete="off"
@@ -75,7 +75,7 @@
                         </mat-form-field>
                       </div>
 
-                      <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                      <div class="col-lg-6 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">LC NO</mat-label>
                             <input matInput placeholder="Enter LC NO" formControlName="LcNo" maxlength="30" autocomplete="off" appNumberOnly/>
@@ -86,7 +86,7 @@
 
                     <div class="form-group kt-form__group row">
 
-                        <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                        <div class="col-lg-6 kt-margin-bottom-20-mobile">
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                     <mat-label class="customMatLabel">Circle</mat-label>
@@ -101,9 +101,14 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-4 kt-margin-bottom-20-mobile">
+
+
+                    </div>
+
+                    <div class="form-group kt-form__group row">
+                        <div class="col-lg-6 kt-margin-bottom-20-mobile">
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                            <mat-form-field>
+                            <mat-form-field class="w-full">
                                 <mat-label class="customMatLabel">Account Status<strong class="matMandatory">*</strong></mat-label>
                                 <mat-select formControlName="AccountStatus">
                                     <!-- <mat-option *ngFor="let lov of vendorLov" [value]="lov.Value">
@@ -113,13 +118,9 @@
                             </mat-form-field>
                             </div>
                         </div>
-
-                    </div>
-
-                    <div class="form-group kt-form__group row">
-                        <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                        <div class="col-lg-6 kt-margin-bottom-20-mobile">
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
-                            <mat-form-field>
+                            <mat-form-field class="w-full">
                                 <mat-label class="customMatLabel">Export Format<strong class="matMandatory">*</strong></mat-label>
                                 <mat-select formControlName="ExportFormat">
                                     <!-- <mat-option *ngFor="let lov of vendorLov" [value]="lov.Value">
@@ -142,8 +143,9 @@
     </form>
 
     <div class="form-group kt-form__group row">
-        <div class="col-lg-12 kt-margin-bottom-20-mobile mat-table mt-3 d-flex justify-content-left">
+        <div class="col-lg-12 kt-margin-bottom-20-mobile mat-table mt-3 d-flex justify-between">
             <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" mat-raised-button color="primary" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Find</button>
+            <button   class="mat-focus-indicator  btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"(click)="close(0)"><mat-icon class="mr-2">close</mat-icon>Cancel</button>
         </div>
       </div>
   
