--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -4,18 +4,21 @@
         sm:absolute sm:inset-0
         flex flex-col flex-auto
         min-w-0
-        sm:overflow-scroll
+        sm:overflow-y-scroll
+        overflow-x-hidden
         bg-card
         dark:bg-transparent
+        
+        reports
     "
 >
-    <div class="row py-3">
-        <div class="col-lg-12 col-sm-12">
+    <div class="row">
+        <div class="col-lg-12 col-sm-12 pt-3">
             <div class="heading">Reports</div>
         </div>
     </div>
 
-    <div class="col-lg-12 row mt-2 justify-content-center text-center border-t py-4">
+    <div class="col-lg-12 row ml-1  mt-2 justify-content-center text-center bg-gray-50  py-4">
         <div class="col-lg-4 col-sm-12">
             <!-- <mat-accordion>
                 <mat-expansion-panel hideToggle>
@@ -27,7 +30,7 @@
                     <search-loan-cases-by-cnic></search-loan-cases-by-cnic>
                 </mat-expansion-panel>
             </mat-accordion> -->
-            <mat-card (click) = "searchLoanCase()" class="cursor-pointer mx-4" id="llcInquiryText" style="height: 130px;">Search Loan Cases by CNIC</mat-card>
+            <mat-card (click) = "searchLoanCase()" class="cursor-pointer mx-4" id="llcInquiryText"> <p>Search Loan Cases by CNIC</p></mat-card>
         </div>
 
         <div class="col-lg-4 col-sm-12">
@@ -41,7 +44,7 @@
                     <bufrication-of-os-balances-lc></bufrication-of-os-balances-lc>
                 </mat-expansion-panel>
             </mat-accordion> -->
-            <mat-card (click) = "bufrictionOfOSBalances()" class="cursor-pointer mx-4" id="llcInquiryText" style="height: 130px;">Bifurcation of OS balances LC</mat-card>
+            <mat-card (click) = "bufrictionOfOSBalances()" class="cursor-pointer mx-4" id="llcInquiryText" >Bifurcation of OS balances LC</mat-card>
         </div>
 
         <div class="col-lg-4 col-sm-12">
@@ -55,11 +58,11 @@
                     <updated-list-of-defaulters></updated-list-of-defaulters>
                 </mat-expansion-panel>
             </mat-accordion> -->
-            <mat-card (click) = "updatedListOfDefaulters()" class="cursor-pointer mx-4" id="llcInquiryText" style="height: 130px;">Updated List of defaulters of a circle for each MCO</mat-card>
+            <mat-card (click) = "updatedListOfDefaulters()" class="cursor-pointer mx-4" id="llcInquiryText" >Updated List of defaulters of a circle for each MCO</mat-card>
         </div>
     </div>
 
-    <div class="col-lg-12 mt-2 row justify-content-center text-center border-t py-4">
+    <div class="col-lg-12 mt-2 row ml-1 justify-content-center text-center bg-gray-50  py-4">
         
         <div class="col-lg-4 col-sm-12">
             <!-- <mat-accordion>
@@ -88,18 +91,18 @@
                     <early-warning-reports></early-warning-reports>
                 </mat-expansion-panel>
             </mat-accordion> -->
-            <mat-card (click) = "earlyWarningReports()" class="cursor-pointer mx-4" id="llcInquiryText" style="height: 130px;">Early warning reports for MCOs</mat-card>
+            <mat-card (click) = "earlyWarningReports()" class="cursor-pointer mx-4" id="llcInquiryText" >Early warning reports for MCOs</mat-card>
         </div>
 
         <div class="col-lg-4 col-sm-12">
-            <mat-card (click) = "dueInstallments()" class="cursor-pointer mx-4" id="llcInquiryText" style="height: 130px;">Due Installments</mat-card>
+            <mat-card (click) = "dueInstallments()" class="cursor-pointer mx-4" id="llcInquiryText" >Due Installments</mat-card>
         </div>
 
     </div>
 
-    <div class="col-lg-12 mt-2 row justify-content-center text-center border-t py-4">
+    <div class="col-lg-12 mt-2 ml-1 mr-3 row justify-content-center text-center bg-gray-50  py-4">
       <div class="col-lg-4 col-sm-12">
-        <mat-card (click) = "loanAmountConvertToDefault()" class="cursor-pointer mx-4" id="llcInquiryText" style="height: 130px;">Loan amounts likely to be converted into default</mat-card>
+        <mat-card (click) = "loanAmountConvertToDefault()" class="cursor-pointer mx-4" id="llcInquiryText">Loan amounts likely to be converted into default</mat-card>
       </div>
   </div>
 </div>
