--- a/src/app/modules/reports/search-loan-cases-by-cnic/search-loan-cases-by-cnic.component.html
+++ b/src/app/modules/reports/search-loan-cases-by-cnic/search-loan-cases-by-cnic.component.html
@@ -1,13 +1,13 @@
 
-<div id="Kt-portlet-margin-top">
+<div id="Kt-portlet-margin-top mt-5">
     <div class="kt-portlet">
-        <div class="kt-portlet__head kt-portlet__head__custom" id="list-header" style="display: flex;flex-direction: row;justify-content: space-between; margin-bottom: 10px;">
+        <div class="kt-portlet__head kt-portlet__head__custom" id="list-header" style="justify-content: space-between; margin-bottom: 10px;">
             <div class="kt-portlet__head-label">
-                <h3 class="kt-portlet__head-title">Add Vendor's Location</h3>
+                <h3 class="heading w-100">Add Vendor's Location</h3>
             </div>
             <!-- <span (click)="close(0)"><mat-icon>close</mat-icon></span> -->
            
-            <button mat-raised-button color="warn" class="btn center" style="width: 5px; height: 30px;" (click)="close(0)"><mat-icon>close</mat-icon></button>
+            
         </div>
     </div>
   
@@ -20,7 +20,7 @@
                 <div class="col-lg-12">
                   <div class="form-group kt-form__group row">
 
-                    <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                    <div class="col-lg-6 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
                             <mat-label class="customMatLabel">Zone</mat-label>
                             <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone">
@@ -42,7 +42,7 @@
                         </mat-form-field>
                     </div>
 
-                    <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                    <div class="col-lg-6 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
                             
@@ -68,7 +68,7 @@
 
                   <div class="form-group kt-form__group row">
 
-                      <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                      <div class="col-lg-6 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">CNIC</mat-label>
                             <input matInput placeholder="Enter Cnic" formControlName="Cnic" maxlength="13" autocomplete="off"
@@ -76,7 +76,7 @@
                         </mat-form-field>
                       </div>
 
-                      <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                      <div class="col-lg-6 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Customer Name</mat-label>
                             <input matInput placeholder="Enter Customer Name" formControlName="CustomerName" maxlength="30" autocomplete="off"/>
@@ -86,7 +86,7 @@
                 </div>
 
                     <div class="form-group kt-form__group row">
-                        <div class="col-lg-4 kt-margin-bottom-20-mobile">
+                        <div class="col-lg-6 kt-margin-bottom-20-mobile">
                             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                                 <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                     <mat-label class="customMatLabel">Father Name</mat-label>
@@ -106,8 +106,9 @@
     </form>
 
     <div class="form-group kt-form__group row">
-        <div class="col-lg-12 kt-margin-bottom-20-mobile mat-table mt-3 d-flex justify-content-left">
+        <div class="col-lg-12 kt-margin-bottom-20-mobile mat-table mt-3 d-flex flex justify-between ">
             <button data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" mat-raised-button color="primary" (click)="find()"><mat-icon class="mr-2">search</mat-icon> Find</button>
+            <button   class="mat-focus-indicator  btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"(click)="close(0)"><mat-icon class="mr-2">close</mat-icon>Cancel</button>
         </div>
       </div>
   
